@@ -1,7 +1,9 @@
 package com.example.RecipeBook.item.model;
 
 import javax.persistence.*;
+import java.util.HashSet;
 import java.util.Objects;
+import java.util.Set;
 import java.util.UUID;
 
 @Entity
@@ -9,23 +11,20 @@ public class Item {
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private Integer id;
+    private Long id;
+    private UUID publicId;
     private String name;
-    private int amount;
+    private Double amount;
     @Enumerated(EnumType.STRING)
     private Measurement measurement;
-    private boolean needed = false;
+    private Boolean needed = false;
+    @Enumerated(EnumType.STRING)
     private Measurement defaultMeasurement;
-    private UUID publicId;
-
-    public UUID getPublicId() {
-        return publicId;
-    }
-
-    public void setPublicId(UUID publicId) {
-        if (this.publicId == null)
-            this.publicId = publicId;
-    }
+    private Double amountInGrams;
+    private Double amountInCups;
+    private String stringValue;
+    @ElementCollection(targetClass = String.class)
+    private final Set<String> aliases = new HashSet<>();
 
     public boolean isNeeded() {
         return needed;
@@ -43,7 +42,6 @@ public class Item {
         this.defaultMeasurement = defaultMeasurement;
     }
 
-
     public String getName() {
         return name;
     }
@@ -52,11 +50,11 @@ public class Item {
         this.name = name;
     }
 
-    public int getAmount() {
+    public double getAmount() {
         return amount;
     }
 
-    public void setAmount(int amount) {
+    public void setAmount(double amount) {
         this.amount = amount;
     }
 
@@ -68,12 +66,36 @@ public class Item {
         this.measurement = measurement;
     }
 
+    public String getStringValue() {
+        return stringValue;
+    }
+
+    public void setStringValue(String stringValue) {
+        this.stringValue = stringValue;
+    }
+
+    public UUID getPublicId() {
+        return publicId;
+    }
+
+    public Boolean getNeeded() {
+        return needed;
+    }
+
+    public void setPublicId(UUID publicId) {
+        this.publicId = publicId;
+    }
+
+    public void setNeeded(Boolean needed) {
+        this.needed = needed;
+    }
+
     @Override
     public boolean equals(Object o) {
         if (this == o) return true;
         if (o == null || getClass() != o.getClass()) return false;
         Item item = (Item) o;
-        return id.equals(item.id);
+        return (id != null && item.id != null && id.equals(item.id)) || this.toString().equals(o.toString());
     }
 
     @Override
@@ -83,7 +105,11 @@ public class Item {
 
     @Override
     public String toString() {
-        return "%d %s %s".formatted(amount, measurement, name);
+        return String.format("%f %s %s", amount, measurement.getString(), name);
+    }
+
+    public boolean addAlias(String newAlias) {
+        return aliases.add(newAlias);
     }
 
     public static class IngredientConverter implements AttributeConverter<Item, String> {
@@ -96,7 +122,7 @@ public class Item {
         public Item convertToEntityAttribute(String dbData) {
             String[] items = dbData.split(" ");
             Item item = new Item();
-            item.amount = Integer.parseInt(items[0]);
+            item.amount = Double.parseDouble(items[0]);
             item.measurement = Measurement.valueOf(items[1]);
             item.name = items[2];
             return item;
